--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
 				<version>${dependency.version.jaxb-impl}</version>
 			</dependency>
 			<dependency>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
+				<version>6.1.0</version>
+			</dependency>
+			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
 				<version>${dependency.version.servletapi}</version>
